# irt-lsem

./: .gitignore  LICENSE  README.md  pyproject.toml  run_pipeline.sh
docs/: decisions_log.md  known_issues.md  oirt_vi_design.md  scope_refinement.md
notebooks/: b4c_colab.ipynb
outputs/b0_preprocessed/: b0_summary.json
outputs/b1_dimensionality/: b1_decision.txt
outputs/b2_calibration/: b2_decision.txt  b2_postprocess_summary.txt  irt_1pl_grade_10.csv  irt_1pl_grade_11.csv  irt_1pl_grade_12.csv  irt_2pl_grade_10.csv  irt_2pl_grade_10_clean.csv  irt_2pl_grade_10_flagged.csv  irt_2pl_grade_11.csv  irt_2pl_grade_11_clean.csv  irt_2pl_grade_11_flagged.csv  irt_2pl_grade_12.csv  irt_2pl_grade_12_clean.csv  irt_2pl_grade_12_flagged.csv  irt_comparison_grade_10.txt  irt_comparison_grade_11.txt  irt_comparison_grade_12.txt  item_fit_1pl_grade_10.csv  item_fit_1pl_grade_11.csv  item_fit_2pl_grade_10.csv  item_fit_2pl_grade_11.csv  item_fit_2pl_grade_12.csv
outputs/b4_lsem/: b4a_fit_indices.csv  b4a_slope_lgcm_vs_mlm.csv  ctdsem_population_params.csv  ctdsem_summary.txt  lcsm_params_grade_10.csv  lcsm_params_grade_11.csv  lcsm_params_grade_12.csv  lgcm_lcsm_fit_indices.csv  lgcm_params_grade_10.csv  lgcm_params_grade_11.csv  lgcm_params_grade_12.csv  mlm_params_grade_10.csv  mlm_params_grade_11.csv  mlm_params_grade_12.csv
outputs/b5_report/: final_baseline_comparison.csv  final_convergent_evidence.csv  final_ctdsem_individual_summary.csv  final_ctdsem_population.csv  final_early_warning_summary.csv  final_fit_indices.csv  (+9 more)
paper/: Makefile  README.md  main.tex
(+50 files in other folders)
